# BurgerBot3-QR

./: .gitignore  README.md  requirements.txt
src/simulation/: package.xml  setup.py
src/simulation/environments/: environment_polygon_0.pickle
src/simulation/launch/: launch_robot_1.py  launch_robot_1b.py  launch_robot_1c.py  launch_robot_2.py  launch_robot_2b.py  launch_sim.py
src/simulation/meshes/: world_0_obstacle_0.stl  world_0_obstacle_1.stl  world_0_obstacle_2.stl  world_0_obstacle_3.stl  world_0_obstacle_4.stl  world_0_obstacle_5.stl  world_0_obstacle_6.stl  world_0_obstacle_7.stl  world_0_wall_bottom.stl  world_0_wall_left.stl  world_0_wall_right.stl  world_0_wall_top.stl  world_1_obstacle_0.stl  world_1_obstacle_1.stl  world_1_obstacle_2.stl  world_1_obstacle_3.stl  world_1_obstacle_4.stl  world_1_obstacle_5.stl  world_1_obstacle_6.stl  world_1_obstacle_7.stl  world_1_wall_top.stl  world_2_obstacle_0.stl  world_2_obstacle_1.stl  world_2_obstacle_2.stl  world_2_obstacle_3.stl  world_2_obstacle_4.stl  world_2_obstacle_5.stl  world_2_obstacle_6.stl  world_2_obstacle_7.stl  world_2_wall_right.stl  world_3_obstacle_0.stl  world_3_obstacle_1.stl  world_3_obstacle_2.stl  world_3_obstacle_3.stl  world_3_obstacle_4.stl  world_3_obstacle_5.stl  world_3_obstacle_6.stl  world_3_obstacle_7.stl  world_3_wall_bottom.stl  world_4_obstacle_0.stl  (+48 more)
src/simulation/simulation/: env_to_world.py  gen_obstacle.py  gen_world.py
src/simulation/worlds/: world_0.world  world_1.world  world_2.world  world_3.world  world_4.world  world_5.world  world_6.world  world_7.world  (+2 more)
(+34 files in other folders)
