<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>Models environment and burger bot in gazebo.</description>
  <maintainer email="georgeperegoyr@gmail.com">gperegoy</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
